src/objects/MUSW__Login_UserInfo__c.object
<CustomObject>
    <description>Stores temporary user credentials</description>
    <fields>
        <fullName>MUSW__Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MUSW__TempPassword__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TempPassword</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>usersLoginInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Login User Info</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>userName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Login_UsersInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>